--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div class="flex-container">
-        <div class="header">
-            <p>Header Logo</p>
+        <div class="flex-item">
+            <p class="header-logo">Header Logo</p>
         </div>
-        <div>
-            <p>Filler Text</p>
+        <div class="flex-item">
+            <span class="hero-s">Links</span>
+            <span class="hero-s">Links</span>
+            <span class="hero-s">Links</span>
         </div>
     </div>
 </body>
