Edit Header with index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="flex-container">
-        <div class="flex-item">
-            <p class="header-logo">Header Logo</p>
-        </div>
-        <div class="flex-item">
-            <span class="hero-s">Links</span>
-            <span class="hero-s">Links</span>
-            <span class="hero-s">Links</span>
-        </div>
-    </div>
+    <header class="dark-bg">
+        <nav class="container-row">
+            <div class="hero">
+                <span>Header Logo</span>
+            </div>
+            <div class="hero-sub nav-link">
+                <a>Link</a>
+                <a>Link</a>
+                <a>Link</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
