Further developments on index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="dark-bg">
-        <nav class="container-row">
+        <nav>
             <div class="hero">
                 <span>Header Logo</span>
             </div>
@@ -19,6 +19,18 @@
                 <a>Link</a>
             </div>
         </nav>
+        <div class="main dark-bg">
+            <div class="main-div">
+                <p>This website is awesome</p>
+                <p class="hero-sub">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, rerum itaque adipisci necessitatibus quia quisquam laborum alias. Temporibus vitae sequi eveniet consequuntur iste illum rerum, id reprehenderit fugiat, provident voluptatem.
+                </p>
+                <button class="signup-btn hero">Sign Up</button>
+            </div>
+            <div>
+                <img width="500" height="300">
+            </div>
+        </div>
     </header>
 </body>
 </html>
