further develop index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -14,23 +14,37 @@
                 <span>Header Logo</span>
             </div>
             <div class="hero-sub nav-link">
-                <a>Link</a>
-                <a>Link</a>
-                <a>Link</a>
+                <a>Link 1</a>
+                <a>Link 2</a>
+                <a>Link 3</a>
             </div>
         </nav>
-        <div class="main dark-bg">
+        <nav class="main dark-bg">
             <div class="main-div">
                 <p>This website is awesome</p>
                 <p class="hero-sub">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, rerum itaque adipisci necessitatibus quia quisquam laborum alias. Temporibus vitae sequi eveniet consequuntur iste illum rerum, id reprehenderit fugiat, provident voluptatem.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, 
+                    rerum itaque adipisci necessitatibus quia quisquam laborum alias. 
+                    Temporibus vitae sequi eveniet consequuntur iste illum rerum, 
+                    id reprehenderit fugiat, provident voluptatem.
                 </p>
                 <button class="signup-btn hero">Sign Up</button>
             </div>
             <div>
-                <img width="500" height="300">
+                <img src="images/flowers.jpg" width="500" height="300">
             </div>
-        </div>
+        </nav>
+        <nav class="content white-bg">
+            <div>
+                <p class="info-header">Some random information</p>
+                <div>
+                    <img width="100" height="100">
+                    <img width="100" height="100">
+                    <img width="100" height="100">
+                    <img width="100" height="100">
+                </div>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
