--- a/index.html
+++ b/index.html
@@ -35,13 +35,23 @@
             </div>
         </nav>
         <nav class="content white-bg">
-            <div>
-                <p class="info-header">Some random information</p>
+            <p class="info-header">Some random information</p>
+            <div class="content-pictures">
                 <div>
-                    <img width="100" height="100">
-                    <img width="100" height="100">
-                    <img width="100" height="100">
-                    <img width="100" height="100">
+                    <img src="images/world.svg" width="200" height="200">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div>
+                    <img src="images/world.svg" width="200" height="200">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div>
+                    <img src="images/world.svg" width="200" height="200">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div>
+                    <img src="images/world.svg" width="200" height="200">
+                    <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
         </nav>
