--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 it's just filling up space or maybe people will actually read it.
                 Who knows? All I know is that it looks nice.
             </p>
+            <p class="quote-credit">-Thor, God of Thunder</p>
         </nav>
     </header>
 </body>
