Add call to action section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
             </p>
             <p class="quote-credit">-Thor, God of Thunder</p>
         </nav>
+        <nav class="white-bg cta">
+            <div class="signup">
+                <div>
+                    <p class="hero">Call to action! It's time!</p>
+                <p class="hero-sub">Sign up for our product by clicking that
+                     button right over there!
+                </p>
+                </div>
+                <div>
+                    <button class="signup-btn hero">Sign Up</button>
+                </div>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
