--- a/index.html
+++ b/index.html
@@ -8,74 +8,75 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header class="dark-bg">
-        <nav>
-            <div class="hero">
-                <span>Header Logo</span>
-            </div>
-            <div class="hero-sub nav-link">
-                <a>Link 1</a>
-                <a>Link 2</a>
-                <a>Link 3</a>
-            </div>
-        </nav>
-        <nav class="main dark-bg">
-            <div class="main-div">
-                <p>This website is awesome</p>
-                <p class="hero-sub">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, 
-                    rerum itaque adipisci necessitatibus quia quisquam laborum alias. 
-                    Temporibus vitae sequi eveniet consequuntur iste illum rerum, 
-                    id reprehenderit fugiat, provident voluptatem.
-                </p>
-                <button class="signup-btn hero">Sign Up</button>
+    <nav class="dark-bg">
+        <div class="hero">
+            <span>Header Logo</span>
+        </div>
+        <div class="hero-sub nav-link">
+            <a>Link 1</a>
+            <a>Link 2</a>
+            <a>Link 3</a>
+        </div>
+    </nav>
+    <nav class="main dark-bg">
+        <div class="main-div">
+            <p>This website is awesome</p>
+            <p class="hero-sub">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, 
+                rerum itaque adipisci necessitatibus quia quisquam laborum alias. 
+                Temporibus vitae sequi eveniet consequuntur iste illum rerum, 
+                id reprehenderit fugiat, provident voluptatem.
+            </p>
+            <button class="signup-btn hero">Sign Up</button>
+        </div>
+        <div class="main-div">
+            <img src="images/flowers.jpg" width="500" height="300">
+        </div>
+    </nav>
+    <nav class="content white-bg">
+        <p class="info-header">Some random information</p>
+        <div class="content-pictures">
+            <div>
+                <img src="images/world.svg" width="200" height="200">
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div>
-                <img src="images/flowers.jpg" width="500" height="300">
+                <img src="images/world.svg" width="200" height="200">
+                <p>this is some subtext under an illustration or image</p>
             </div>
-        </nav>
-        <nav class="content white-bg">
-            <p class="info-header">Some random information</p>
-            <div class="content-pictures">
-                <div>
-                    <img src="images/world.svg" width="200" height="200">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div>
-                    <img src="images/world.svg" width="200" height="200">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div>
-                    <img src="images/world.svg" width="200" height="200">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div>
-                    <img src="images/world.svg" width="200" height="200">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
+            <div>
+                <img src="images/world.svg" width="200" height="200">
+                <p>this is some subtext under an illustration or image</p>
             </div>
-        </nav>
-        <nav class="quote gray-bg">
-            <p class="quote-text">
-                This is an inspiring quote or a testimonial from a customer. Maybe
-                it's just filling up space or maybe people will actually read it.
-                Who knows? All I know is that it looks nice.
+            <div>
+                <img src="images/world.svg" width="200" height="200">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </nav>
+    <nav class="quote gray-bg">
+        <p class="quote-text">
+            This is an inspiring quote or a testimonial from a customer. Maybe
+            it's just filling up space or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+        </p>
+        <p class="quote-credit">-Thor, God of Thunder</p>
+    </nav>
+    <nav class="white-bg cta">
+        <div class="signup">
+            <div>
+                <p class="hero">Call to action! It's time!</p>
+            <p class="hero-sub">Sign up for our product by clicking that
+                 button right over there!
             </p>
-            <p class="quote-credit">-Thor, God of Thunder</p>
-        </nav>
-        <nav class="white-bg cta">
-            <div class="signup">
-                <div>
-                    <p class="hero">Call to action! It's time!</p>
-                <p class="hero-sub">Sign up for our product by clicking that
-                     button right over there!
-                </p>
-                </div>
-                <div>
-                    <button class="signup-btn hero">Sign Up</button>
-                </div>
             </div>
-        </nav>
-    </header>
+            <div>
+                <button class="signup-btn hero">Sign Up</button>
+            </div>
+        </div>
+    </nav>
+    <nav class="footer dark-bg">
+        <p class="hero-sub">Copyright @ The Odin Project 2022</p>
+    </nav>
 </body>
 </html>
